--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -6,11 +6,17 @@ on:
   pull_request:
   schedule:
     - cron: "30 1 * * 0"
-
 jobs:
   codeql:
     name: 🏭 Scanning
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        # Override automatic language detection by changing the list below
+        # Supported options are:
+        # ['csharp', 'cpp', 'go', 'java', 'javascript', 'python']
+        language: ['csharp', 'javascript']    
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v2
